syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/akolobaha/fin_quotes.pb";

service DataManagementService {
  rpc GetQuotes (TickerRequest) returns (TickerResponse);
  rpc GetMultipleQuotes (MultipleTickerRequest) returns (MultipleTickerResponse);
}

message TickerRequest {
  string Name = 1;
  float Price = 2;
  google.protobuf.Timestamp Time = 3;
}

message TickerResponse {
  string Name = 1;
  float Price = 2;
  google.protobuf.Timestamp Time = 3;
}

message MultipleTickerRequest {
  repeated TickerRequest tickers = 1;  // Массив запросов
}

message MultipleTickerResponse {
  repeated TickerResponse responses = 1; // Массив ответов
}